platform/workloads/apps/demo-app/rendered/manifests.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    k8s.score.dev/resource-guid: 348c277b-7e34-4d98-87cc-5a29d1108dcd
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-348c277b
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-348c277b
  name: pg-hello-world-348c277b
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pg-hello-world-348c277b
  serviceName: pg-hello-world-348c277b
  template:
    metadata:
      annotations:
        k8s.score.dev/resource-guid: 348c277b-7e34-4d98-87cc-5a29d1108dcd
        k8s.score.dev/resource-uid: postgres.default#hello-world.db
        k8s.score.dev/source-workload: hello-world
      labels:
        app.kubernetes.io/instance: pg-hello-world-348c277b
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: pg-hello-world-348c277b
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_USER
              value: user-DxiADSNw
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-348c277b
            - name: POSTGRES_DB
              value: db-zHasluCy
          image: mirror.gcr.io/postgres:17-alpine
          name: postgres-db
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user-DxiADSNw
                - -d
                - db-zHasluCy
            periodSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pv-data
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
  volumeClaimTemplates:
    - metadata:
        annotations:
          k8s.score.dev/resource-guid: 348c277b-7e34-4d98-87cc-5a29d1108dcd
          k8s.score.dev/resource-uid: postgres.default#hello-world.db
          k8s.score.dev/source-workload: hello-world
        labels:
          app.kubernetes.io/instance: pg-hello-world-348c277b
          app.kubernetes.io/managed-by: score-k8s
          app.kubernetes.io/name: pg-hello-world-348c277b
        name: pv-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/resource-guid: 348c277b-7e34-4d98-87cc-5a29d1108dcd
    k8s.score.dev/resource-uid: postgres.default#hello-world.db
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: pg-hello-world-348c277b
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: pg-hello-world-348c277b
  name: pg-hello-world-348c277b
  namespace: demo-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: pg-hello-world-348c277b
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "30"
    k8s.score.dev/resource-guid: 6db47f94-c302-4217-9780-538914ca2927
    k8s.score.dev/resource-uid: route.default#hello-world.route
    k8s.score.dev/source-workload: hello-world
  labels:
    app.kubernetes.io/instance: route-hello-world-6db47f94
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: route-hello-world-6db47f94
  name: route-hello-world-6db47f94
  namespace: demo-app
spec:
  hostnames:
    - demo.oss.baby
  parentRefs:
    - name: default
  rules:
    - backendRefs:
        - name: hello-world
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-9079ee0beb
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
  namespace: demo-app
spec:
  ports:
    - name: www
      port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: hello-world-9079ee0beb
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.score.dev/workload-name: hello-world
  labels:
    app.kubernetes.io/instance: hello-world-9079ee0beb
    app.kubernetes.io/managed-by: score-k8s
    app.kubernetes.io/name: hello-world
  name: hello-world
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: hello-world-9079ee0beb
  strategy: {}
  template:
    metadata:
      annotations:
        k8s.score.dev/workload-name: hello-world
        tags: nodejs,http,website,javascript,postgres
      labels:
        app.kubernetes.io/instance: hello-world-9079ee0beb
        app.kubernetes.io/managed-by: score-k8s
        app.kubernetes.io/name: hello-world
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              value: db-zHasluCy
            - name: DB_HOST
              value: pg-hello-world-348c277b
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pg-hello-world-348c277b
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: user-DxiADSNw
            - name: MESSAGE
              value: Hello, World!
            - name: PORT
              value: "3000"
          image: julsemaan/oss-baby:latest
          name: hello-world
          resources: {}
status: {}
